# terminal_lyrics

./: .gitignore  README.md  get_lyrics.py  main.py  music.py  pyproject.toml  requirements.txt  setup.py
terminal_lyrics/: __main__.py  app.py  cli.py  config.py  logging_setup.py
terminal_lyrics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terminal_lyrics/cache/: sqlite.py
terminal_lyrics/i18n/: __init__.py  en.json  ru.json
terminal_lyrics/lrc/: export.py  model.py  parse.py
terminal_lyrics/mpris/: client.py  errors.py
terminal_lyrics/render/: ansi.py
terminal_lyrics/sources/: base.py  lrclib.py  lyrics_ovh.py  service.py  types.py
terminal_lyrics/sync/: tracker.py
tests/: __init__.py  test_app_with_mock.py  test_export.py  test_i18n_config.py  test_lyrics_parsing.py  test_mpris.py  test_mpris_unit.py  test_render_mocked.py  test_render_sigwinch.py  test_tracker.py
tests/mocks/: __init__.py  mpris_mock.py
